--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>gabrielinho´s dev</title>
+  <title>st1yler´s dev</title>
 
   <!-- Apple-like font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -583,7 +583,7 @@
 
 <section class="hero">
   <div>
-    <h1>gabrielinho´s dev</h1>
+    <h1>st1yler´s dev</h1>
     <p>
       Roblox Developer specialized in advanced scripting systems and high-quality modeling,
       with experience building scalable game architectures using Rojo and structured
@@ -772,22 +772,22 @@
   <h2>Contact Me</h2>
   <div class="contact">
     <!-- Discord: se puede abrir Discord con un enlace a usuario mediante el tag, aunque no es clicable directamente -->
-    <a href="https://discord.com/users/803323233779712021" target="_blank" title="Gabrielinho#dev">
+    <a href="https://discord.com/users/1044626710_w" target="_blank" title="st1yler´s Discord">
       <i class="fa-brands fa-discord"></i>
     </a>
     
     <!-- GitHub: enlace directo -->
-    <a href="https://gabrielinhobussines.github.io/gabrielinho/" target="_blank" title="GitHub">
+    <a href="https://github.com/st1yler" target="_blank" title="GitHub">
       <i class="fa-brands fa-github"></i>
     </a>
     
     <!-- Roblox: enlace a perfil -->
-    <a href="https://www.roblox.com/users/1054981789/profile" target="_blank" title="Roblox">
+    <a href="https://www.roblox.com/users/10293637061/profile" target="_blank" title="Roblox">
       <i class="fa-solid fa-play"></i>
     </a>
   </div>
   <div class="copyright">
-    © 2026 Gabrielinho. Todos los derechos reservados. Sypcho &amp; Asimcro.
+    © 2026 st1yler. Todos los derechos reservados. Sypcho &amp; Asimcro.
   </div>
 </footer>
 
