--- a/Lua/Lua.html
+++ b/Lua/Lua.html
@@ -31,6 +31,7 @@
     <a href="#scripting">Scripting</a>
     <a href="#modeling">Modeling</a>
     <a href="../3d-viewer.html" class="nav-3d-link">3D Viewer</a>
+    <a href="#hire">Hire</a>
     <a href="#contact">Contact</a>
   </div>
   
@@ -337,7 +338,51 @@
     </div>
   </div>
 </section>
+<!-- Add this section right after the payments section and before the footer -->
+<section id="hire">
+  <h2>Hire Me</h2>
+  
+  <div class="card hire-card">
+    <div class="hire-content">
+      <div class="hire-icon">
+        <i class="fab fa-discord"></i>
+      </div>
+      <div class="hire-text">
+        <h3>Available for Projects</h3>
+        <p>I'm currently available for Roblox scripting, modeling, and full-game development projects. Let's discuss your vision and bring it to life with professional-grade solutions.</p>
+        <div class="hire-features">
+          <div class="hire-feature">
+            <i class="fas fa-check-circle"></i>
+            <span>Custom Scripting Systems</span>
+          </div>
+          <div class="hire-feature">
+            <i class="fas fa-check-circle"></i>
+            <span>High-Quality 3D Models</span>
+          </div>
+          <div class="hire-feature">
+            <i class="fas fa-check-circle"></i>
+            <span>Scalable Game Architecture</span>
+          </div>
+          <div class="hire-feature">
+            <i class="fas fa-check-circle"></i>
+            <span>Optimized Performance</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <a href="https://discord.com/users/1457880585279246479" 
+       target="_blank" 
+       class="hire-button">
+      <i class="fab fa-discord"></i>
+      Message Me on Discord
+      <span class="button-subtitle">Direct communication for project inquiries</span>
+    </a>
+  </div>
+</section>
 
+<footer id="contact">
+  <!-- Footer content remains the same -->
 <footer id="contact">
   <h2>Contact Me</h2>
   <div class="contact">
